lang/test/testdata/errors/if_non_bool.scampi
func f() int {
  if "" {
    return 1
  }
  return 0
}
